--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,17 @@
-Nacculator was Originally coded by Taeber Rapczak <taeber@ufl.edu> for the 
-1Florida Alzheimer's Disease Research Center [http://1floridaadrc.org/].
+AUTHORS
+=======
 
 The set of utility tools presented in this repository were made possible
 by the hard work of:
 
-Ajantha Raminenji (ajantha.5779@gmail.com)
-Roukna Sengupta (rouknasengupta@gmail.com)
-Matthew J. McConnell (devmattm@gmail.com)
+ * Christopher P. Barnes <cpb@ufl.edu>
+ * Naomi Braun <nbraun@ctsi.ufl.edu>
+ * Niraja Ganpule <niraja1101@ufl.edu>
+ * Kevin S. Hanson <kshanson@ufl.edu>
+ * Matthew J. McConnell <devmattm@gmail.com>
+ * Ajantha Raminenji <ajantha.5779@gmail.com>
+ * Taeber Rapczak <taeber@ufl.edu>
+ * Roukna Sengupta <rouknasengupta@gmail.com>
 
 The NACCulator project would not have been possible without the help and
 support of:
@@ -20,7 +25,4 @@ support of:
  * the National Alzheimer's Coordinating Center at the University of
    Washington [https://www.alz.washington.edu];
  * and the National Institute of Aging.
-
-Mr. Rapczak would especially like to thank Kevin S. Hanson <kshanson@ufl.edu>
-and Christopher P. Barnes <cpb@ufl.edu> for their direction and support.
 
